{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 78,
  "lineage": "ed614684-5a87-9f43-e9f0-79c121decaa4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-074d73da59aaed766",
            "domain": "vpc",
            "id": "eipalloc-0bbcccb99cf74498a",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0a3eddd62ac2c27fb",
            "private_dns": "ip-172-18-67-206.us-east-2.compute.internal",
            "private_ip": "172.18.67.206",
            "public_dns": "ec2-13-58-203-155.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.203.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "blog-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09558250a3419e7d0",
            "arn": "arn:aws:ec2:us-east-2:991720585140:instance/i-096edecb8e741cb8c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096edecb8e741cb8c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio-webserver",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fbe95b2e49702b03",
            "private_dns": "ip-172-18-82-58.us-east-2.compute.internal",
            "private_ip": "172.18.82.58",
            "public_dns": "ec2-3-14-1-243.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.1.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03ed2198ee3d51d5f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c7e29bd6acffcd9",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a3447f389da6527f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ohio-webserver",
            "aws_security_group.blog-bastion",
            "aws_subnet.blog-public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09558250a3419e7d0",
            "arn": "arn:aws:ec2:us-east-2:991720585140:instance/i-07a133fcfe0ee5f5e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a133fcfe0ee5f5e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio-webserver",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01c5238bbc83850e8",
            "private_dns": "ip-172-18-27-182.us-east-2.compute.internal",
            "private_ip": "172.18.27.182",
            "public_dns": "ec2-3-133-125-188.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.125.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07e7489d540767c35",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf67975a6bdba139",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a6a204f0b9423717"
            ]
          },
          "dependencies": [
            "aws_key_pair.ohio-webserver",
            "aws_security_group.blog-bastion",
            "aws_security_group.blog-webserver",
            "aws_subnet.blog-public1",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "blog-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:internet-gateway/igw-00217f9e2c6d537e9",
            "id": "igw-00217f9e2c6d537e9",
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-igw"
            },
            "vpc_id": "vpc-055f4b51468b5dd57"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "blog-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbcccb99cf74498a",
            "id": "nat-093221f823b33ec12",
            "network_interface_id": "eni-0a3eddd62ac2c27fb",
            "private_ip": "172.18.67.206",
            "public_ip": "13.58.203.155",
            "subnet_id": "subnet-04c7e29bd6acffcd9",
            "tags": {
              "Name": "blog-NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "blog-private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-044695f5e1dba8157",
            "owner_id": "991720585140",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-093221f823b33ec12",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blog-private-RT"
            },
            "vpc_id": "vpc-055f4b51468b5dd57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.blog-nat",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "blog-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07dc8dae7ab484ff7",
            "owner_id": "991720585140",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00217f9e2c6d537e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blog-public-RT"
            },
            "vpc_id": "vpc-055f4b51468b5dd57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.blog-igw",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-private1-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f47b80285dca621",
            "route_table_id": "rtb-044695f5e1dba8157",
            "subnet_id": "subnet-020b0102de64264cc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.blog-nat",
            "aws_route_table.blog-private-RT",
            "aws_subnet.blog-private1",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-private1-RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1c2515c516bac8c",
            "route_table_id": "rtb-044695f5e1dba8157",
            "subnet_id": "subnet-01b393f72861512ce"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.blog-nat",
            "aws_route_table.blog-private-RT",
            "aws_subnet.blog-private2",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0159e25db77cd5663",
            "route_table_id": "rtb-07dc8dae7ab484ff7",
            "subnet_id": "subnet-0bf67975a6bdba139"
          },
          "dependencies": [
            "aws_internet_gateway.blog-igw",
            "aws_route_table.blog-public-RT",
            "aws_subnet.blog-public1",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-public2-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7600d81f2ded112",
            "route_table_id": "rtb-07dc8dae7ab484ff7",
            "subnet_id": "subnet-04c7e29bd6acffcd9"
          },
          "dependencies": [
            "aws_internet_gateway.blog-igw",
            "aws_route_table.blog-public-RT",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blog-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:security-group/sg-0a3447f389da6527f",
            "description": "Allow 22 from all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3447f389da6527f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow 22 from all",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow from all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ssh access",
            "name_prefix": "",
            "owner_id": "991720585140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blog-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-055f4b51468b5dd57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blog-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:security-group/sg-0726d28d6231b730b",
            "description": "Allow 22 from bastion, 3306 from webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0726d28d6231b730b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow 22 from all",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3447f389da6527f"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow 3306 from webserver",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a6a204f0b9423717"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database access",
            "name_prefix": "",
            "owner_id": "991720585140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blog-database"
            },
            "timeouts": null,
            "vpc_id": "vpc-055f4b51468b5dd57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.blog-bastion",
            "aws_security_group.blog-webserver",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blog-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:security-group/sg-0a6a204f0b9423717",
            "description": "Allow 80 from all, 22 from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6a204f0b9423717",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow 443 from all",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow 80 from all",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "allow 22 from all",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3447f389da6527f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver access",
            "name_prefix": "",
            "owner_id": "991720585140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blog-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-055f4b51468b5dd57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.blog-bastion",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-020b0102de64264cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.18.128.0/18",
            "id": "subnet-020b0102de64264cc",
            "map_public_ip_on_launch": false,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-private1"
            },
            "vpc_id": "vpc-055f4b51468b5dd57"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-01b393f72861512ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.18.192.0/18",
            "id": "subnet-01b393f72861512ce",
            "map_public_ip_on_launch": false,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-private2"
            },
            "vpc_id": "vpc-055f4b51468b5dd57"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-0bf67975a6bdba139",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.18.0.0/18",
            "id": "subnet-0bf67975a6bdba139",
            "map_public_ip_on_launch": true,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-public1"
            },
            "vpc_id": "vpc-055f4b51468b5dd57"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-04c7e29bd6acffcd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.18.64.0/18",
            "id": "subnet-04c7e29bd6acffcd9",
            "map_public_ip_on_launch": true,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-public2"
            },
            "vpc_id": "vpc-055f4b51468b5dd57"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "blog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:vpc/vpc-055f4b51468b5dd57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-00e7bf947943dfd44",
            "default_route_table_id": "rtb-07ee7bb568cb2c8d5",
            "default_security_group_id": "sg-033003fc3e757c985",
            "dhcp_options_id": "dopt-5479f23f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-055f4b51468b5dd57",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07ee7bb568cb2c8d5",
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog"
            }
          }
        }
      ]
    }
  ]
}